WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107717
Assert that Supplementable objects are only used in their creator thread
https://bugs.webkit.org/show_bug.cgi?id=107717
Summary
Assert that Supplementable objects are only used in their creator thread
Mark Lam
Reported
2013-01-23 12:18:42 PST
Supplementable and Supplement instances should only be used in the thread that created them. Adding an assertion to help detect when someone is unknowingly violating this design premise.
Attachments
The patch.
(2.91 KB, patch)
2013-01-23 12:29 PST
,
Mark Lam
abarth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2013-01-23 12:29:54 PST
Created
attachment 184282
[details]
The patch.
Adam Barth
Comment 2
2013-01-23 13:16:08 PST
Comment on
attachment 184282
[details]
The patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=184282&action=review
> Source/WebCore/platform/Supplementable.h:128 > + ThreadIdentifier m_threadId;
I wonder if this is the right thing for code that uses libdispatch. I think there's some other notion of thread affinity that we're supposed to use in those cases.
Mark Lam
Comment 3
2013-01-23 13:28:40 PST
Landed in
r140580
: <
http://trac.webkit.org/changeset/140580
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug