Assert that Supplementable objects is only used in their creator thread. https://bugs.webkit.org/show_bug.cgi?id=107717.

Reviewed by Adam Barth.

No new tests.

* platform/Supplementable.h:
(WebCore):
(WebCore::Supplementable::provideSupplement):
(WebCore::Supplementable::removeSupplement):
(WebCore::Supplementable::requireSupplement):
(Supplementable):
(WebCore::Supplementable::Supplementable):



Canonical link: https://commits.webkit.org/125916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140580 268f45cc-cd09-0410-ab3c-d52691b4dbfc